# exmpl-cmake-grpc

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
proto/: CMakeLists.txt
proto/myproto/: address.grpc.pb.cc  address.grpc.pb.h  address.pb.cc  address.pb.h  addressbook.grpc.pb.cc  addressbook.grpc.pb.h  addressbook.pb.cc  addressbook.pb.h
server/: CMakeLists.txt
